# silodb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml
crates/silodb/: Cargo.toml
crates/silodb-bench/: Cargo.toml  README.md
crates/silodb-bench/src/: main.rs
crates/silodb-catalog/: Cargo.toml
crates/silodb-catalog/src/: lib.rs
crates/silodb-compact/: Cargo.toml
crates/silodb-compact/src/: lib.rs
crates/silodb-compact/tests/: compact_test.rs
crates/silodb-loadable/: Cargo.toml
crates/silodb-loadable/src/: lib.rs
crates/silodb-schema/: Cargo.toml
crates/silodb-schema/proptest-regressions/: lib.txt
crates/silodb-schema/src/: lib.rs
crates/silodb-server/: Cargo.toml  README.md
crates/silodb-server/admin-ui/: Cargo.toml  Dioxus.toml  build.sh
crates/silodb-server/admin-ui/assets/: codemirror.js  main.css
crates/silodb-server/admin-ui/src/: api.rs  main.rs  views.rs
crates/silodb-server/admin-ui/src/components/: mod.rs
crates/silodb-server/admin-ui/src/components/select/: component.rs
crates/silodb-server/src/: admin.rs  auth.rs  db.rs  influx.rs  influxql.rs  keys.rs  lib.rs  lineproto.rs  main.rs
crates/silodb-server/tests/: admin_test.rs  influx_test.rs  server_test.rs
crates/silodb-server/ui/: package-lock.json  package.json  vite.config.ts
crates/silodb-server/ui-dist/: index.html
crates/silodb-server/ui-dist/assets/: codemirror-dxh731361f8469ed6ea.js  main-dxh3716389ab5defc9.css  main-dxh68bfa9572f4fd4c7.css  main-dxh6a3cf4436a88e8db.css  silodb-admin-ui-dxh176d106627d3790.js  silodb-admin-ui-dxh284b9f173aeed3d.js  silodb-admin-ui-dxhbcca52b58932ee9.js  silodb-admin-ui-dxhd37c3c13f4037b9.js  silodb-admin-ui_bg-dxh8580cf3f9f86509c.wasm  silodb-admin-ui_bg-dxh952ee936d3951c8c.wasm  silodb-admin-ui_bg-dxhbe6d47162b0e6c0.wasm  silodb-admin-ui_bg-dxhf3cd4763c4a484ae.wasm  style-dxh12fba22175aebba4.css  style-dxh18addf1f9895a1.css  style-dxh2ce9abed1138149.css  style-dxh3c1cc92a1a416f8.css  style-dxh4efb5edbb117b7c6.css  style-dxh5faa9fc38e3b8c1.css  style-dxh65ff5ef9ef8dffc3.css  style-dxh76a9b66ef2f2d5.css  style-dxh87a0eddb47adef9b.css  style-dxh901d61e57722a2f.css  style-dxhb0ebf7906aa56cd1.css  style-dxhcdc97e20afaee2cb.css  style-dxhd2b5a211eb3fb5b0.css  style-dxhde4b0befdba5226.css
crates/silodb-server/ui/src/: api.ts  index.css
crates/silodb-server/ui/src/components/: ui.tsx
crates/silodb-server/ui/src/views/: Keys.tsx  Sql.tsx  Tables.tsx
crates/silodb-vtab/: Cargo.toml
crates/silodb-vtab/src/: lib.rs
crates/silodb-vtab/tests/: directory_test.rs  prop_test.rs  pruning_test.rs  robustness_test.rs  vtab_test.rs
crates/silodb-vtab/tests/common/: mod.rs
crates/silodb/examples/: quickstart.rs  sql_only.rs
crates/silodb/src/: lib.rs
crates/silodb/tests/: alter_test.rs  concurrency_test.rs  e2e_test.rs  maintenance_test.rs  managed_test.rs  prop_lifecycle_test.proptest-regressions  prop_lifecycle_test.rs  prop_roundtrip_test.rs  rollup_test.rs  sql_admin_test.rs  stats_test.rs
docs/: phase0-results.md  spec.md  specv3.md  specv4.md
docs/archive/: specv1.md  specv2.md
examples/: Cargo.toml  README.md  plain_sqlite.rs  quickstart.rs  sql_only.rs
fixtures/: basic.parquet
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parquet_footer.rs  ts_parse.rs  vtab_ddl.rs
grafana/provisioning/datasources/: silodb.yml
