[package]
name = "silodb-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
silodb = { version = "0.1.0", path = "../silodb" }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.4"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
