[package]
name = "silodb-vtab"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "59.1.0"
parquet = "59.1.0"
rusqlite = { version = "0.40.1", features = ["vtab"] }
silodb-schema = { version = "0.1.0", path = "../silodb-schema" }

[dev-dependencies]
rusqlite = { version = "0.40.1", features = ["vtab", "bundled"] }
