[package]
name = "silodb"
version = "0.1.0"
edition = "2024"

[dependencies]
silodb-catalog = { version = "0.1.0", path = "../silodb-catalog" }
silodb-compact = { version = "0.1.0", path = "../silodb-compact" }
silodb-vtab = { version = "0.1.0", path = "../silodb-vtab" }

[dev-dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
